--- a/index.html
+++ b/index.html
@@ -8,30 +8,29 @@
 </head>
 <body>
   <header>
-    <h1>Xin chào, tôi là Trần Đức Duy</h1>
-    <p>tao đang test</p>
+    <h1>Xin chào, Tít mặt lờ nha</h1>
+    <p>chắc là cưng đã bấm vào link rồi</p>
   </header>
 
   <section>
-    <h2>Về tôi</h2>
-    <p>Tôi là người đang học lập trình và muốn tạo ra sản phẩm web đầu tiên của mình.</p>
+    <h2>Nhìn xuống dưới</h2>
+    <p>Tít cek cek cek cek cek</p>
   </section>
 
   <section>
-    <h2>Kỹ năng</h2>
+    <h2>Giờ đang đọc dòng này đúng không hẹ hẹ hẹ hẹ</h2>
     <ul>
-      <li>HTML cơ bản</li>
-      <li>Thiết kế trang web</li>
-      <li>Ham học hỏi</li>
+      <li>Tít thúi</li>
+      <li>Thúi ình </li>
+      <li>Thúi quắc</li>
     </ul>
   </section>
 
   <section>
     <h2>Thông tin liên hệ</h2>
-    <p>Email: nguyenvana@gmail.com</p>
     <p>Tiktok: <a href="https://www.tiktok.com/@duyrunbox?_t=ZS-8wmbadJT1Xe&_r=1" target="_blank">Envy Prime</a></p>
 
-    <p>Facebook: fb.com/nguyenvana</p>
+    <p>Facebook: fb.com/Đang cập nhật</p>
   </section>
 
   <section>
@@ -42,7 +41,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Nguyễn Văn A</p>
+    <p>© 2025 Anh Duy iu dấu</p>
   </footer>
 </body>
 </html>
