--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="sticker-container">
+  <img src="sticker.gif" alt="Sticker" class="moving-sticker">
+</div>
+
   <header>
     <h1>Xin chào, Tít mặt lờ nha</h1>
     <p>chắc là cưng đã bấm vào link rồi</p>
