--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="sticker-container">
-  <img src="sticker.gif" alt="Sticker" class="moving-sticker">
-</div>
+  <img src="e2019f3ed26d66333f7c.jpg" alt="Sticker" class="moving-sticker">
+  </div>
 
   <header>
     <h1>Xin chào, Tít mặt lờ nha</h1>
