--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
     <span><i class="fa-brands fa-tiktok"></i></span>
    </div>
   </a>
-  <div class="icon twitter">
+  <a href="https://zalo.me/0924539400" target="_blank" rel="noopener noreferrer">
+   <div class="icon twitter">
     <div class="tooltip">Twitter</div>
     <span><i class="fa-brands fa-twitter"></i></span>
-  </div>
-</div>
-   
+   </div>
+   </div>
+  </a> 
   </section>
  <section id="job" class="job-section">
    <h2>Job</h2>
