--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   </section>
 
   <section id="about" class="about-section">
-   <h2>About Me</h2>
-   <p>Xin chào bạn, bên đây là thông tin liên hệ của mình</p>
+   <h2 class="led-gradient">About Me</h2>
+   <p>Xin chào bạn, dưới đây là thông tin liên hệ của mình.</p>
          
     <div class="social-container">
   <div class="icon facebook">
