--- a/index.html
+++ b/index.html
@@ -59,12 +59,41 @@
   </section>
  <section id="job" class="job-section">
    <h2>Job</h2>
-   <p>More text...</p>
+   <p>Kênh mình sẽ có 2 hình thức hợp tác như sau :</p>
+    <div class="cards-container">
+       <video class="job-bg-video" autoplay muted loop playsinline>
+        <source src="encryption-bg.webm" type="video/webm">
+       </video>
+       <div class="video-fade-top"></div> 
+       <div class="video-fade-bottom"></div>
+      <div class="card card1">
+    <div class="date">option <span>ONE</span></div>
+  <ul class="job-list">
+    <li>Quay review unbox.</li>
+    <li>Thời lượng 30s-45s.</li>
+    <li>Gửi demo nếu shop yêu cầu.</li>
+    <li>Freecast.</li>
+    <li>Trả demo/video sau 4 ngày từ khi nhận sản phẩm.</li>
+  </ul>
+    </div>
+
+  <div class="card card2">
+    <div class="date">option <span>TWO</span></div>
+      <ul class="job-list">
+    <li>Quay review unbox.</li>
+    <li>Thời lượng 30s-45s.</li>
+    <li>Gửi demo nếu shop yêu cầu.</li>
+    <li>Freecast.</li>
+    <li>Trả demo/video sau 4 ngày từ khi nhận sản phẩm.</li>
+  </ul>
+  </div>
+    </div>
+
  </section>
 
   <section id="product" class="product-section">
    <h2>Product</h2>  
-   <p>Even more text...</p>
+   <p>Update...</p>
   </section>
 
   <script src="script.js"></script>
