--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <li>Quay review unbox.</li>
     <li>Thời lượng 30s-45s.</li>
     <li>Gửi demo nếu shop yêu cầu.</li>
-    <li>Freecast.</li>
+    <li>Freecast khi nhận mẫu free.</li>
     <li>Trả demo/video sau 4 ngày từ khi nhận sản phẩm.</li>
   </ul>
     </div>
@@ -83,7 +83,7 @@
     <li>Quay review unbox.</li>
     <li>Thời lượng 30s-45s.</li>
     <li>Gửi demo nếu shop yêu cầu.</li>
-    <li>Freecast.</li>
+    <li>Lồng tiếng video, cast sẽ thương lượng sau.</li>
     <li>Trả demo/video sau 4 ngày từ khi nhận sản phẩm.</li>
   </ul>
   </div>
