--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <li>Thời lượng 30s-45s.</li>
     <li>Gửi demo nếu shop yêu cầu.</li>
     <li>Freecast khi nhận mẫu free.</li>
-    <li>Trả demo/video sau 4 ngày từ khi nhận sản phẩm.</li>
+    <li>Trả demo, video sau 4 ngày từ khi nhận sản phẩm.</li>
   </ul>
     </div>
 
@@ -84,7 +84,7 @@
     <li>Thời lượng 30s-45s.</li>
     <li>Gửi demo nếu shop yêu cầu.</li>
     <li>Lồng tiếng video, cast sẽ thương lượng sau.</li>
-    <li>Trả demo/video sau 4 ngày từ khi nhận sản phẩm.</li>
+    <li>Trả demo, video sau 4 ngày từ khi nhận sản phẩm.</li>
   </ul>
   </div>
     </div>
