--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
   <section id="about" class="about-section">
    <h2 class="led-gradient">About Me</h2>
-   <p>Xin chào mình tên là Duy, dưới đây là thông tin liên hệ của mình.</p>
+   <p>Xin chào, mình tên là Duy </p>
+   </p> dưới đây là thông tin liên hệ của mình.</p>
          
     <div class="social-container">
   <div class="icon facebook">
