--- a/index.html
+++ b/index.html
@@ -70,22 +70,24 @@
       <div class="card card1">
     <div class="date">option <span>ONE</span></div>
   <ul class="job-list">
-    <li>Quay review unbox.</li>
+    <h2><li>Quay review unbox.</li>
     <li>Thời lượng 30s-45s.</li>
     <li>Gửi demo nếu shop yêu cầu.</li>
     <li>Freecast khi nhận mẫu free.</li>
     <li>Trả demo, video sau 4 ngày từ khi nhận sản phẩm.</li>
+    </h2>
   </ul>
     </div>
 
   <div class="card card2">
     <div class="date">option <span>TWO</span></div>
       <ul class="job-list">
-    <li>Quay review unbox.</li>
+    <h2><li>Quay review unbox.</li>
     <li>Thời lượng 30s-45s.</li>
     <li>Gửi demo nếu shop yêu cầu.</li>
     <li>Lồng tiếng video, cast sẽ thương lượng sau.</li>
     <li>Trả demo, video sau 4 ngày từ khi nhận sản phẩm.</li>
+    </h2>
   </ul>
   </div>
     </div>
