--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="IMG_5925.jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+  <link rel="apple-touch-icon" href="IMG_5925.jpg">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Tên App Của Bạn">
 </head>
 <body>
 
